testsuite/tests/structs/invalid_env_md/two_md.lkt
import common

@metadata struct Metadata {
}

@metadata struct Metadata {
}
